feat: 메뉴얼 전처리 기능 개발